PR/44876: Aleksey Cheusov: awk: incorrect return value of function srand() Make it return the value of the previous random seed as the standard mandates.